# Weather-Intelligence-Service

./: .env.example  .gitignore  alembic.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: main.py
app/domain/entities/: persistence.py  weather.py
app/domain/ports/: repository.py  weather_provider.py
app/infrastructure/config/: settings.py
app/infrastructure/observability/: logging.py  request_context.py
app/infrastructure/persistence/: models.py  repositories.py  session.py
app/infrastructure/providers/: base.py  condition_maps.py  meteostat.py  normalization.py  open_meteo.py  openweather.py  weatherapi.py
app/interface/http/: dependencies.py
docs/: 01_System_Architecture_Overview.md  02_Product_Requirements_Document.md  03_Technical_Design_Document.md  04_API_and_Data_Contract_Specification.md  05_Implementation_and_Development_Guide.md
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: test_config.py  test_logging.py  test_persistence.py  test_provider_normalization.py
tests/fixtures/providers/: meteostat_daily.json  open_meteo_forecast.json  openweather_forecast.json  weatherapi_forecast.json
tests/integration/: test_repositories.py
tests/providers/: test_base.py  test_meteostat.py  test_open_meteo.py  test_openweather.py  test_weatherapi.py
